engine/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> DP DOT IDENTIFIER LPAREN IDENTIFIER COMMA IDENTIFIER RPAREN
Rule 5     statement -> DP DOT IDENTIFIER LPAREN IDENTIFIER RPAREN
Rule 6     statement -> LOAD STRING AS IDENTIFIER
Rule 7     statement -> FILTER IDENTIFIER WHERE IDENTIFIER comparison NUMBER AS IDENTIFIER
Rule 8     statement -> PLOT IDENTIFIER AS IDENTIFIER
Rule 9     comparison -> GREATER
Rule 10    comparison -> LESS
Rule 11    comparison -> EQUALS

Terminals, with rules where they appear

AS                   : 6 7 8
COMMA                : 4
DOT                  : 4 5
DP                   : 4 5
EQUALS               : 11
FILTER               : 7
GREATER              : 9
IDENTIFIER           : 4 4 4 5 5 6 7 7 7 8 8
LESS                 : 10
LOAD                 : 6
LPAREN               : 4 5
NUMBER               : 7
PLOT                 : 8
RPAREN               : 4 5
STRING               : 6
WHERE                : 7
error                : 

Nonterminals, with rules where they appear

comparison           : 7
program              : 0
statement            : 2 3
statement_list       : 1 3

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . DP DOT IDENTIFIER LPAREN IDENTIFIER COMMA IDENTIFIER RPAREN
    (5) statement -> . DP DOT IDENTIFIER LPAREN IDENTIFIER RPAREN
    (6) statement -> . LOAD STRING AS IDENTIFIER
    (7) statement -> . FILTER IDENTIFIER WHERE IDENTIFIER comparison NUMBER AS IDENTIFIER
    (8) statement -> . PLOT IDENTIFIER AS IDENTIFIER

    DP              shift and go to state 4
    LOAD            shift and go to state 5
    FILTER          shift and go to state 6
    PLOT            shift and go to state 7

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . DP DOT IDENTIFIER LPAREN IDENTIFIER COMMA IDENTIFIER RPAREN
    (5) statement -> . DP DOT IDENTIFIER LPAREN IDENTIFIER RPAREN
    (6) statement -> . LOAD STRING AS IDENTIFIER
    (7) statement -> . FILTER IDENTIFIER WHERE IDENTIFIER comparison NUMBER AS IDENTIFIER
    (8) statement -> . PLOT IDENTIFIER AS IDENTIFIER

    $end            reduce using rule 1 (program -> statement_list .)
    DP              shift and go to state 4
    LOAD            shift and go to state 5
    FILTER          shift and go to state 6
    PLOT            shift and go to state 7

    statement                      shift and go to state 8

state 3

    (2) statement_list -> statement .

    DP              reduce using rule 2 (statement_list -> statement .)
    LOAD            reduce using rule 2 (statement_list -> statement .)
    FILTER          reduce using rule 2 (statement_list -> statement .)
    PLOT            reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> DP . DOT IDENTIFIER LPAREN IDENTIFIER COMMA IDENTIFIER RPAREN
    (5) statement -> DP . DOT IDENTIFIER LPAREN IDENTIFIER RPAREN

    DOT             shift and go to state 9


state 5

    (6) statement -> LOAD . STRING AS IDENTIFIER

    STRING          shift and go to state 10


state 6

    (7) statement -> FILTER . IDENTIFIER WHERE IDENTIFIER comparison NUMBER AS IDENTIFIER

    IDENTIFIER      shift and go to state 11


state 7

    (8) statement -> PLOT . IDENTIFIER AS IDENTIFIER

    IDENTIFIER      shift and go to state 12


state 8

    (3) statement_list -> statement_list statement .

    DP              reduce using rule 3 (statement_list -> statement_list statement .)
    LOAD            reduce using rule 3 (statement_list -> statement_list statement .)
    FILTER          reduce using rule 3 (statement_list -> statement_list statement .)
    PLOT            reduce using rule 3 (statement_list -> statement_list statement .)
    $end            reduce using rule 3 (statement_list -> statement_list statement .)


state 9

    (4) statement -> DP DOT . IDENTIFIER LPAREN IDENTIFIER COMMA IDENTIFIER RPAREN
    (5) statement -> DP DOT . IDENTIFIER LPAREN IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 13


state 10

    (6) statement -> LOAD STRING . AS IDENTIFIER

    AS              shift and go to state 14


state 11

    (7) statement -> FILTER IDENTIFIER . WHERE IDENTIFIER comparison NUMBER AS IDENTIFIER

    WHERE           shift and go to state 15


state 12

    (8) statement -> PLOT IDENTIFIER . AS IDENTIFIER

    AS              shift and go to state 16


state 13

    (4) statement -> DP DOT IDENTIFIER . LPAREN IDENTIFIER COMMA IDENTIFIER RPAREN
    (5) statement -> DP DOT IDENTIFIER . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 17


state 14

    (6) statement -> LOAD STRING AS . IDENTIFIER

    IDENTIFIER      shift and go to state 18


state 15

    (7) statement -> FILTER IDENTIFIER WHERE . IDENTIFIER comparison NUMBER AS IDENTIFIER

    IDENTIFIER      shift and go to state 19


state 16

    (8) statement -> PLOT IDENTIFIER AS . IDENTIFIER

    IDENTIFIER      shift and go to state 20


state 17

    (4) statement -> DP DOT IDENTIFIER LPAREN . IDENTIFIER COMMA IDENTIFIER RPAREN
    (5) statement -> DP DOT IDENTIFIER LPAREN . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 21


state 18

    (6) statement -> LOAD STRING AS IDENTIFIER .

    DP              reduce using rule 6 (statement -> LOAD STRING AS IDENTIFIER .)
    LOAD            reduce using rule 6 (statement -> LOAD STRING AS IDENTIFIER .)
    FILTER          reduce using rule 6 (statement -> LOAD STRING AS IDENTIFIER .)
    PLOT            reduce using rule 6 (statement -> LOAD STRING AS IDENTIFIER .)
    $end            reduce using rule 6 (statement -> LOAD STRING AS IDENTIFIER .)


state 19

    (7) statement -> FILTER IDENTIFIER WHERE IDENTIFIER . comparison NUMBER AS IDENTIFIER
    (9) comparison -> . GREATER
    (10) comparison -> . LESS
    (11) comparison -> . EQUALS

    GREATER         shift and go to state 23
    LESS            shift and go to state 24
    EQUALS          shift and go to state 25

    comparison                     shift and go to state 22

state 20

    (8) statement -> PLOT IDENTIFIER AS IDENTIFIER .

    DP              reduce using rule 8 (statement -> PLOT IDENTIFIER AS IDENTIFIER .)
    LOAD            reduce using rule 8 (statement -> PLOT IDENTIFIER AS IDENTIFIER .)
    FILTER          reduce using rule 8 (statement -> PLOT IDENTIFIER AS IDENTIFIER .)
    PLOT            reduce using rule 8 (statement -> PLOT IDENTIFIER AS IDENTIFIER .)
    $end            reduce using rule 8 (statement -> PLOT IDENTIFIER AS IDENTIFIER .)


state 21

    (4) statement -> DP DOT IDENTIFIER LPAREN IDENTIFIER . COMMA IDENTIFIER RPAREN
    (5) statement -> DP DOT IDENTIFIER LPAREN IDENTIFIER . RPAREN

    COMMA           shift and go to state 26
    RPAREN          shift and go to state 27


state 22

    (7) statement -> FILTER IDENTIFIER WHERE IDENTIFIER comparison . NUMBER AS IDENTIFIER

    NUMBER          shift and go to state 28


state 23

    (9) comparison -> GREATER .

    NUMBER          reduce using rule 9 (comparison -> GREATER .)


state 24

    (10) comparison -> LESS .

    NUMBER          reduce using rule 10 (comparison -> LESS .)


state 25

    (11) comparison -> EQUALS .

    NUMBER          reduce using rule 11 (comparison -> EQUALS .)


state 26

    (4) statement -> DP DOT IDENTIFIER LPAREN IDENTIFIER COMMA . IDENTIFIER RPAREN

    IDENTIFIER      shift and go to state 29


state 27

    (5) statement -> DP DOT IDENTIFIER LPAREN IDENTIFIER RPAREN .

    DP              reduce using rule 5 (statement -> DP DOT IDENTIFIER LPAREN IDENTIFIER RPAREN .)
    LOAD            reduce using rule 5 (statement -> DP DOT IDENTIFIER LPAREN IDENTIFIER RPAREN .)
    FILTER          reduce using rule 5 (statement -> DP DOT IDENTIFIER LPAREN IDENTIFIER RPAREN .)
    PLOT            reduce using rule 5 (statement -> DP DOT IDENTIFIER LPAREN IDENTIFIER RPAREN .)
    $end            reduce using rule 5 (statement -> DP DOT IDENTIFIER LPAREN IDENTIFIER RPAREN .)


state 28

    (7) statement -> FILTER IDENTIFIER WHERE IDENTIFIER comparison NUMBER . AS IDENTIFIER

    AS              shift and go to state 30


state 29

    (4) statement -> DP DOT IDENTIFIER LPAREN IDENTIFIER COMMA IDENTIFIER . RPAREN

    RPAREN          shift and go to state 31


state 30

    (7) statement -> FILTER IDENTIFIER WHERE IDENTIFIER comparison NUMBER AS . IDENTIFIER

    IDENTIFIER      shift and go to state 32


state 31

    (4) statement -> DP DOT IDENTIFIER LPAREN IDENTIFIER COMMA IDENTIFIER RPAREN .

    DP              reduce using rule 4 (statement -> DP DOT IDENTIFIER LPAREN IDENTIFIER COMMA IDENTIFIER RPAREN .)
    LOAD            reduce using rule 4 (statement -> DP DOT IDENTIFIER LPAREN IDENTIFIER COMMA IDENTIFIER RPAREN .)
    FILTER          reduce using rule 4 (statement -> DP DOT IDENTIFIER LPAREN IDENTIFIER COMMA IDENTIFIER RPAREN .)
    PLOT            reduce using rule 4 (statement -> DP DOT IDENTIFIER LPAREN IDENTIFIER COMMA IDENTIFIER RPAREN .)
    $end            reduce using rule 4 (statement -> DP DOT IDENTIFIER LPAREN IDENTIFIER COMMA IDENTIFIER RPAREN .)


state 32

    (7) statement -> FILTER IDENTIFIER WHERE IDENTIFIER comparison NUMBER AS IDENTIFIER .

    DP              reduce using rule 7 (statement -> FILTER IDENTIFIER WHERE IDENTIFIER comparison NUMBER AS IDENTIFIER .)
    LOAD            reduce using rule 7 (statement -> FILTER IDENTIFIER WHERE IDENTIFIER comparison NUMBER AS IDENTIFIER .)
    FILTER          reduce using rule 7 (statement -> FILTER IDENTIFIER WHERE IDENTIFIER comparison NUMBER AS IDENTIFIER .)
    PLOT            reduce using rule 7 (statement -> FILTER IDENTIFIER WHERE IDENTIFIER comparison NUMBER AS IDENTIFIER .)
    $end            reduce using rule 7 (statement -> FILTER IDENTIFIER WHERE IDENTIFIER comparison NUMBER AS IDENTIFIER .)

